# TP_ML

./: .gitignore  CMakeLists.txt  Project_Regression.ipynb  get.py  getPoints.py  lib.py  losses.py  main  main.cpp
Classification/: Logistic.h  main.cpp
FIRE/: Project_Regression.ipynb
ML Algorithms/: ANN.h  Adaline.h  main.cpp
Maths/: Distributions.h  Math_Functions.h
Python work/: Classification.ipynb
Python work/.ipynb_checkpoints/: Classification-checkpoint.ipynb  Classification-checkpoint.py
Regression/: Adaline.h
Sheets/: index.html  src.js  test.js
TP1/C/: DeltaRule.h  Perceptron.h  Pocket.h
TP1/Cpp/: DeltaRule.h  Perceptron.h  main.cpp
TP1/DataStructure/: Matrix.h  main.cpp
TP1/Fort/: Constants.f90  DeltaRule.f90  Perceptron.f90  Pocket.f90  Test.f90
TP1/Pocket/: main.cpp  ok  pocket.h
TP2/: Distributions.h  Math_Functions.h  Optimizer.h
TP2/ex2/: LogisticRegression.h  main.cpp
TP2/ex3/: MultiRegression.h  main.cpp
new/: Distributions.h  Math_Functions.h  NonLinearTransformation.h  Optimizer.h
