cmake_minimum_required(VERSION 3.16)
project(TP_ML)

set(CMAKE_CXX_STANDARD 20)
#enable_language(Fortran)
#add_executable(TP_ML TP1/Fort/Test.f90 TP1/Fort/Perceptron.f90 TP1/Fort/DeltaRule.f90 TP1/Fort/Pocket.f90  TP1/Fort/Constants.f90 TP1/Cpp/main.cpp)
#set(CMAKE_Fortran_FLAGS  "-mcmodel=large")
add_executable(TP_ML TP1/Cpp/main.cpp TP1/Cpp/Perceptron.h TP1/Cpp/DeltaRule.h TP1/DataStructure/Matrix.h TP1/DataStructure/Matrix.h)
#add_executable(TP_ML main.cpp )
find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
target_link_libraries(TP_ML ${PYTHON_LIBRARIES})